# qna-gunhee-python-opencvImplementThresholdMethods

./: pyproject.toml
app/: __init__.py
